--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,2 @@
-My first app using React with Rails.
+My first app using React with Rails with this tutorial:
+http://tutorials.pluralsight.com/ruby-ruby-on-rails/building-a-crud-interface-with-react-and-ruby-on-rails
